--- a/app/views/imports/index.html.erb
+++ b/app/views/imports/index.html.erb
@@ -1,32 +1,43 @@
-<%= form_for(@import, url: imports_save_path) do |f| %>
-  <%= f.file_field :file %>
-  <%= f.submit 'Importar' %>
-<% end %>
-<table>
-  <thead>
-    <tr>
-      <th>Comprador</th>
-      <th>Descriçao</th>
-      <th>Preço</th>
-      <th>Quantidade</th>
-      <th>Endereço</th>
-      <th>Fornecedor</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @imports.each do |import| %>
-    <tr>
-      <td><%= import.buyer %></td>
-      <td><%= import.description %></td>
-      <td><%= import.price %></td>
-      <td><%= import.quantity %></td>
-      <td><%= import.address %></td>
-      <td><%= import.supplier %></td>
-    </tr>
+<div class="container">
+  <div class="upload-container shadow-z-1">
+    <%= form_tag imports_save_path, multipart: true do %>
+        <%= label_tag :file, t(:upload_file) %>
+        <%= file_field_tag :file %>
+        <%= submit_tag t(:import) %>
     <% end %>
-  </tbody>
-</table>
-
-
-
-
+  </div>
+  <!-- Responsive table starts here -->
+  <!-- For correct display on small screens you must add 'data-title' to each 'td' in your table -->
+  <div class="table-responsive-vertical shadow-z-1">
+    <!-- Table starts here -->
+    <table id="table" class="table table-hover table-striped table-mc-light-blue">
+      <thead>
+      <tr>
+        <th><%= Import.human_attribute_name(:buyer).titleize %></th>
+        <th><%= Import.human_attribute_name(:description).titleize %> </th>
+        <th><%= Import.human_attribute_name(:price).titleize %> </th>
+        <th><%= Import.human_attribute_name(:quantity).titleize %> </th>
+        <th><%= Import.human_attribute_name(:address).titleize %> </th>
+        <th><%= Import.human_attribute_name(:supplier_id).titleize %> </th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @imports.each do |import| %>
+          <tr>
+            <td><%= import.buyer.name if import.buyer %></td>
+            <td><%= import.description %></td>
+            <td><%= number_to_currency(import.price) %></td>
+            <td><%= import.quantity %></td>
+            <td><%= import.address %></td>
+            <td><%= import.supplier.name if import.supplier %></td>
+          </tr>
+      <% end %>
+      </tbody>
+      <tfoot>
+      <th colspan="2">Total:</th>
+      <th><%= number_to_currency(@imports.sum(:price)) %></th>
+      <th><%= @imports.sum(:quantity) %></th>
+      </tfoot>
+    </table>
+  </div>
+</div>
